# test_assessment_2

./: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  test_exporters_simple.py
alembic/: env.py  script.py.mako
alembic/versions/: a984eb0e4af2_create_all_tables_according_to_erd.py
app/: dependencies.py
app/controllers/: export_controller.py  weather_controller.py
app/core/: config.py  database.py  error_handlers.py  exceptions.py
app/infrastructure/: __init__.py  api_clients.py  exporters.py
app/models/: __init__.py  weather.py
app/repositories/: __init__.py  weather_repository.py
app/routers/: export.py  weather.py
app/schemas/: __init__.py  export.py  weather.py
app/services/: __init__.py  weather_service.py
